--- a/style.css
+++ b/style.css
@@ -1,12 +1,25 @@
 * {
-  padding: 0;
-  margin: 0;
+    padding: 0;
+    margin: 0;
 }
 
 .pug {
-  display: block;
-  border: 1px solid #af4b34;
-  margin: 0 auto;
-  padding: 5px;
+    display: block;
+    border: 1px solid #af4b34;
+    margin: 0 auto;
+    padding: 5px
 }
-/*# sourceMappingURL=style.css.map */
+
+body {
+    background: #af4b34;
+}
+
+canvas {
+    height: 100vh;
+}
+
+@media all and (max-width: 480px) {
+    canvas {
+        height: 480px;
+    }
+}
